# CG-RayT

./: README.md
images/: scene_03.ppm3
rt-supporting-code/: CMakeLists.txt  README.md  simple_bkg2  simple_bkg3  simple_bkg33  simple_bkg34  simple_bkg7  simple_bkg9  simple_bkgblue  simple_bkgblueno  simple_bkgg3  simple_bkgg4  simple_bkgg5
rt-supporting-code/scene/: scene_01.xml  scene_02.xml  scene_03.xml  scene_04.xml
rt-supporting-code/src/core/: api.cpp  api.h  background.cpp  background.h  camera.cpp  camera.h  film.cpp  film.h  image_io.cpp  paramset.h  parser.cpp  parser.h  ray.h  rt3.h
